refactor:删除历史记录的接口重构
