# docs/swagger.json
@@ -38,47 +38,18 @@
                     }
                 ],
                 "responses": {}
-            },
-            "delete": {
-                "description": "删除历史记录",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "历史记录操作"
-                ],
-                "summary": "删除历史记录",
-                "parameters": [
-                    {
-                        "description": "删除历史记录请求体",
-                        "name": "story",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/types.DeleteStoryReq"
-                        }
-                    },
-                    {
-                        "type": "string",
-                        "description": "身份验证令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {}
             }
         },
         "/story/generate": {
             "post": {
-                "description": "生成故事",
+                "description": "生成故事(不保存到历史记录)",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "历史记录操作"
                 ],
-                "summary": "生成故事",
+                "summary": "生成故事(不保存到历史记录)",
                 "parameters": [
                     {
                         "description": "生成故事请求体",
@@ -181,6 +152,35 @@
                         "schema": {
                             "$ref": "#/definitions/types.SelectStoryReq"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "身份验证令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/story/{title}": {
+            "delete": {
+                "description": "删除历史记录",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "历史记录操作"
+                ],
+                "summary": "删除历史记录",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "历史记录标题",
+                        "name": "title",
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -459,18 +459,6 @@
                 "keywords": {
                     "type": "string",
                     "example": "大学生+未完成的作业"
-                }
-            }
-        },
-        "types.DeleteStoryReq": {
-            "type": "object",
-            "required": [
-                "title"
-            ],
-            "properties": {
-                "title": {
-                    "type": "string",
-                    "example": "story1"
                 }
             }
         },
